--- a/Index.html
+++ b/Index.html
@@ -36,12 +36,12 @@
           <h1 class="headline">Professional Portfolio</h1>
           <p class="subhead">Clean, modern, and responsive portfolio template — ready to showcase skills and projects.</p>
           <div class="hero-cta">
-            <a href="#projects" class="btn">View Projects</a>
-            <a href="#contact" class="btn btn-outline">Contact</a>
+            <a href="#" class="btn">View Projects</a>
+            <a href="#" class="btn btn-outline">Contact</a>
           </div>
         </div>
         <div class="hero-card" aria-hidden="true">
-          <img src="placeholder-avatar.png" alt="Placeholder avatar" class="avatar">
+          <img src="placeholder-avatar.jpg" alt="Placeholder avatar" class="avatar">
         </div>
       </div>
     </section>
@@ -134,4 +134,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
